update FilterCommand usage message